changes to support deployment on android